Do not restore Projects tool view when no project exists

The plugins do not have a property/method which signals that
it should not be restored in its current state. That is
why we wait for one iteration of the event loop and then
hide our tool view.

BUG: 432296